--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ docs/_build/
 
 # PyBuilder
 .pybuilder/
-target/
+target
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -127,6 +127,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+yash01/
 
 # Spyder project settings
 .spyderproject
